# OpenGodEngine

./: CMakeLists.txt  Entry.cpp
Engine/: CMakeLists.txt
Engine/GEngine/: pch.h
Engine/GEngine/Core/: Application.cpp  Application.h  Entry.h
Engine/GEngine/Core/Logger/: Logger.cpp  Logger.h
Game/: CMakeLists.txt
Game/Source/: Game.cpp
